--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,50 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+
+
+    <!--header_________-->
+    <style name="header_bbar_title">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="header_bbar_value">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+
+    <!--body_________-->
+    <style name="body_title">
+        <item name="android:textColor">#66ccff</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">20sp</item>
+
+    </style>
+
+    <style name="body_img">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:width">70dp</item>
+        <item name="android:height">70dp</item>
+    </style>
+
+    <style name="body_tem">
+        <item name="android:textColor">#66ccff</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">20sp</item>
+
+    </style>
+
+    <!--footer+++++++++++++++++++++-->
+    <style name="footer_title">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_margin">3dp</item>
+    </style>
+
 </resources>
