--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -47,9 +47,13 @@
 
     <!--footer+++++++++++++++++++++-->
     <style name="footer_title">
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textColor">#000000</item>
         <item name="android:layout_margin">3dp</item>
     </style>
 
+    <style name="footer_text">
+        <item name="android:textSize">17sp</item>
+
+    </style>
 </resources>
