--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -246,17 +246,16 @@
             </LinearLayout>
 
             <TextView
-                android:layout_marginTop="2dp"
                 android:id="@+id/body_more"
                 android:gravity="center"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 android:padding="3dp"
                 android:textColor="#444444"
                 android:background="#ffffff"
-                android:layout_margin="0dp"
-                android:text="详细信息"
+                android:layout_marginTop="5dp"
+                android:text="                 详 细 信 息             ->"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="40dp" />
 
             <LinearLayout
                 android:layout_marginTop="5dp"
