--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,13 +34,17 @@
                 android:layout_height="350dp">
 
                 <LinearLayout
+                    android:id="@+id/header_centerinfo"
                     android:layout_centerInParent="true"
                     android:layout_marginBottom="50dp"
                     android:padding="25dp"
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+
+
                     <TextView
+                        android:paddingLeft="70dp"
                         android:id="@+id/nowTem"
                         android:text="30°"
                         android:textSize="100sp"
@@ -48,6 +52,7 @@
                         android:fontFamily="monospace"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
                     <TextView
                         android:id="@+id/nowCityWeather"
                         android:text="黄岛 | 多云"
@@ -57,6 +62,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_alignParentBottom="true"
@@ -143,6 +149,8 @@
 
                 </LinearLayout>
 
+
+
             </RelativeLayout>
 
 
@@ -152,6 +160,36 @@
                 android:background="#eeeeee"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        style="@style/body_title"
+                        android:text="今天"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/duoyun"
+                        android:id="@+id/body_imgjintian"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp" />
+
+                    <TextView
+                        android:id="@+id/body_temjintian"
+                        style="@style/body_tem"
+                        android:text="20~30°"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_weight="1"
@@ -211,34 +249,6 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        style="@style/body_title"
-                        android:text="大后天"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <ImageView
-                        android:layout_margin="5dp"
-                        android:layout_gravity="center"
-                        android:src="@mipmap/daxue"
-                        android:id="@+id/body_imgdahoutian"
-                        android:layout_width="55dp"
-                        android:layout_height="55dp" />
-
-                    <TextView
-                        android:id="@+id/body_temdahoutian"
-                        style="@style/body_tem"
-                        android:text="20~30°"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
 
 
 
@@ -253,7 +263,7 @@
                 android:textColor="#444444"
                 android:background="#ffffff"
                 android:layout_marginTop="5dp"
-                android:text="                 详 细 信 息             ->"
+                android:text="未 来 7 天"
                 android:layout_width="match_parent"
                 android:layout_height="40dp" />
 
