--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -268,6 +268,263 @@
                 android:layout_height="40dp" />
 
             <LinearLayout
+                android:orientation="vertical"
+                android:background="#fafafa"
+                android:layout_marginTop="5dp"
+                android:padding="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        style="@style/footer_title"
+                        android:text="空气质量:   "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/footer_kongqizhiliang"
+                        android:textColor="#44ff44"
+                        style="@style/footer_title"
+                        android:text="优"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    style="@style/footer_title"
+                    android:text="PM2.5:        "
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/footer_pm25"
+                    android:textColor="#44ff44"
+                    style="@style/footer_title"
+                    android:text="7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        style="@style/footer_title"
+                        android:text="P10:            "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/footer_pm10"
+                        android:textColor="#44ff44"
+                        style="@style/footer_title"
+                        android:text="10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <!--footer_bar-->
+            <LinearLayout
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:orientation="vertical"
+                android:background="#fafafa"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:src="@mipmap/daxue"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            style="@style/footer_text"
+                            android:layout_gravity="center"
+                            android:text="aqi:30"
+                            android:id="@+id/footer_bar_aqi"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:src="@mipmap/yintian"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            style="@style/footer_text"
+                            android:layout_gravity="center"
+                            android:text="no2:10"
+                            android:id="@+id/footer_bar_no2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:src="@mipmap/qingtian"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            style="@style/footer_text"
+                            android:layout_gravity="center"
+                            android:text="co:0"
+                            android:id="@+id/footer_bar_co"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:src="@mipmap/duoyun"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            style="@style/footer_text"
+                            android:layout_gravity="center"
+                            android:text="qlty:30"
+                            android:id="@+id/footer_bar_qlty"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:src="@mipmap/leizhenyu"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            style="@style/footer_text"
+                            android:layout_gravity="center"
+                            android:text="so2:10"
+                            android:id="@+id/footer_bar_so2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:src="@mipmap/daxue"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp" />
+
+                        <TextView
+                            android:gravity="center"
+                            style="@style/footer_text"
+                            android:layout_gravity="center"
+                            android:text="o3:94"
+                            android:id="@+id/footer_bar_o3"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+
+<!--
+
+            <LinearLayout
                 android:layout_marginTop="5dp"
                 android:background="#ffffff"
                 android:padding="7dp"
@@ -443,6 +700,7 @@
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
+-->
 
 
             <!--
